# phifd

./: .gitignore  Cargo.toml  README.md
src/: lib.rs
src/smoothing/: double_exp.rs  mod.rs
tests/: phi.rs
